logs/Slang/generated/hdlconv/hdlconvertor_p88.sv.log
name: hdlconvertor_p88
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p88.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p88.sv:1:42: error: language feature not yet supported
module ma #( parameter p1 = 1, parameter type p2 = shortint )
                                         ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p88.sv:1:52: error: expected expression
module ma #( parameter p1 = 1, parameter type p2 = shortint )
                                                   ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p88.sv:3:3: error: 'p2' is not a type
  p2 j = 0; // type of j is set by a parameter, (shortint unless redefined)
  ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p88.sv:12:20: error: expected expression
  ma #(.p1(3), .p2(int)) u1(i,o); //redefines p2 to a type of int
                   ^~~
